Fix page jump and style problems with collapsing comments button

--- a/app/index.css
+++ b/app/index.css
@@ -135,3 +135,11 @@ li {
 .toggleCollapse:hover {
 	text-decoration: underline;
 }
+
+a.toggle-dark {
+	color: var(--metaInfoDarkLink);
+}
+
+a.toggle-light {
+	color: var(--metaInfoLightLink);
+}
